<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/item1" 
        android:title="@string/txthighscore"
        android:icon="@drawable/ab_infobeerblank"
        android:showAsAction="never"
        ></item>
    <item android:id="@+id/item2" 
        android:title="@string/ac_drinkfactor"
        android:icon="@drawable/ab_beerfactor"
        android:showAsAction="never"
        >
<menu>
    <group android:checkableBehavior="single">
    <item android:id="@+id/df_half" android:title="@string/ac_half"/>
    <item android:id="@+id/df_normal" android:title="@string/ac_normal" android:checked="true"/>
    <item android:id="@+id/df_double" android:title="@string/ac_double"/>
    </group>
</menu>
    </item>
    <item android:id="@+id/item3" 
        android:title="@string/ac_beer_info"
        android:icon="@drawable/ab_infobeer"
        android:showAsAction="always"
        >
        <menu>
            <item android:id="@+id/item_beerone"/>
            <item android:id="@+id/item_beertwo"/>
            <item android:id="@+id/item_beerthree"/>
            <item android:id="@+id/item_beerfour"/>
        </menu>
    </item>
    <item android:id="@+id/item4" 
        android:title="@string/ac_rate"
        android:icon="@drawable/ab_star"
        android:showAsAction="never"
        ></item>
    <item android:id="@+id/item5" 
        android:title="@string/ac_share" 
        android:icon="@drawable/ab_share"
        android:showAsAction="never"></item>
</menu>