<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mad="http://schemas.android.com/apk/res/com.celticwolf.alex"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/menu_dimbackblank"
    >


     
 <!--     <LinearLayout
        android:id="@+id/adsContainer"
        android:layout_width="fill_parent"
        android:layout_height="50dip" >

     <de.madvertise.android.sdk.MadvertiseView
                     android:id="@+id/madad" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            mad:backgroundColor="#555" 
            mad:textColor="#FF1F1F" 
            mad:bannerType="mma" 
            mad:animation="fade" 
            mad:textSize="20" 
            mad:deliverOnlyText="false" 
        />

 </LinearLayout> -->
 
      <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:paddingTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/menu_logo2"
          android:layout_below="@+id/adsContainer"/>
      
    <Button
        android:id="@+id/bStart"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_centerInParent="true"
     	android:textSize="40sp"
        android:width="200dp"
        android:text="@string/start"
        android:textColor="#FFFFFF"
        android:typeface="serif"
        android:shadowColor="#000000"  
        android:background="@drawable/custommenu"
        android:textStyle="bold"/>
   

    <Button
        android:id="@+id/bAbout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
     	android:textSize="20sp"
        android:width="200dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/bStart"
        android:typeface="serif"
        android:shadowColor="#000000"  
        android:text="@string/about"
        android:textColor="#FFFFFF"
        android:background="@drawable/custommenu"
        android:textStyle="bold"/>
    
    <Button
        android:id="@+id/bSendBrand"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/bAbout"
        android:typeface="serif"
        android:shadowColor="#000000"  
     	android:textSize="20sp"
        android:width="200dp"
        android:text="@string/sendbeerbrand"
        android:textColor="#FFFFFF"
        android:background="@drawable/custommenu"
        android:textStyle="bold"/>

 
    <Button 
        android:id="@+id/bBanner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/schuegabutton"
        
        
        />

</RelativeLayout>